# Piceasel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/core/: Session.h  Window.h
include/util/: Logger.h
src/: CMakeLists.txt  MainLauncher.cpp
src/core/: Session.cpp  Window.cpp
src/util/: Logger.cpp
tests/: CMakeLists.txt  TestRunner.cpp
